--- a/css/desktop.css
+++ b/css/desktop.css
@@ -169,9 +169,9 @@ nav a.active {
     width: 100%;
     height: 100vh;
     background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url("https://images.pexels.com/photos/1238864/pexels-photo-1238864.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-size: cover; 
+     background-repeat: no-repeat;
+    background-image: url("https://i.ibb.co/mzVBdCQ/Whats-App-Image-2024-03-01-at-8-36-02-AM.jpg");
     position: relative;
 }
 
@@ -193,7 +193,7 @@ nav a.active {
     background-color: #003366;
     top: 0;
     position: absolute;
-    opacity: 0.4;
+    opacity: 0.2;
     z-index: 0;
 }
 
