--- a/css/desktop.css
+++ b/css/desktop.css
@@ -110,6 +110,13 @@ html{
     height: 18vh;
     padding: 0 40px 0 40px;
 }
+.header-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
 
 .contenedor-logo img {
     width: 180px; 
@@ -149,6 +156,11 @@ nav a.active {
     width: 100px;
     height: 100%;
 }
+
+.mobileMenu{
+    display: none;
+}
+
 
 
 /* This is the main section */
