--- a/css/tablet.css
+++ b/css/tablet.css
@@ -127,7 +127,6 @@
     }
 
     .mobilMenu__a{
-        color: #F0E3CA;
         color: white;
         font-size: 2.4rem;
         text-transform: none;
@@ -165,3 +164,34 @@
     }
 
 }
+
+/* Principal section style */
+
+@media screen and (min-width: 905px) and (max-width: 980px){
+    
+    .main__section--presentacion h1{
+        margin: 0 40px;
+        top: 300px;
+    }
+}
+
+@media screen and (max-width: 830px){
+    
+    .main__section--presentacion p{
+        top: 350px;
+    }
+    .contact-button{
+        top: 450px;
+    }
+}
+
+@media screen and (min-width: 830px) and (max-width: 980px){
+    
+    .main__section--presentacion p{
+        top: 470px;
+    }
+    .contact-button{
+        top: 560px;
+    }
+}
+
