I am did the style to principel section to movil

--- a/css/movil.css
+++ b/css/movil.css
@@ -91,7 +91,79 @@ br{
     
 }
 
+/*Here strat the code to principal section code */
 
+.main__section--presentacion h1{
+    font-size: 4rem;
+    margin: 0 20px;
+}
+br{
+    display: none;
+}
+
+
+@media screen and (min-width: 560px) and (max-width: 700px){
+    
+    .main__section--presentacion p{
+        top: 250px;
+    }
+    .contact-button{
+        top: 400px;
+    }
+}
+
+.main__section--presentacion p{
+    margin: 0 40px;
+}
+
+.contact-button{
+    top: 350px;
+}
+
+@media screen and (max-width: 598px){
+    
+   
+    .main__section--presentacion p{
+        top: 290px;
+        width: 100%;
+    }
+
+    .contact-button{
+        top: 390px;
+    }
+    .main__section--presentacion h1{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 500px){
+    
+    .main__section--presentacion h1{
+        font-size: 3.4rem;
+        margin: 0 20px;
+    }
+    
+}
+
+@media screen and (max-width: 440px){
+    
+    .main__section--presentacion h1{
+        padding: 10px;
+    }
+
+    .main__section--presentacion p{
+        padding: 10px;
+    }
+    
+}
+
+@media screen and (max-width: 420px){
+    
+    .contact-button{
+        top: 420px;
+    }
+    
+}
 
 
 
