I fixed the problem with quienes somos section

--- a/css/movil.css
+++ b/css/movil.css
@@ -180,6 +180,7 @@ br{
 
 .main__section--quienessomos__description {
     width: 100%;
+    font-size: 1.8rem;
 }
 
 .main__section--quienessomos__image {
