--- a/css/tablet.css
+++ b/css/tablet.css
@@ -266,3 +266,21 @@
     min-width: 100%;
     gap: 20px;
 }
+
+/* Empresas que confian en dvp */
+
+.main__section--empresasQueConfian {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    flex-direction: column;
+    padding: 0;
+    height: auto;
+    gap: 40px;
+}
+
+.empresas-fijo {
+    margin-right: 0px; /* Espacio antes de la cinta corredora */
+    font-size: 4rem;
+    font-style: normal;
+    /* padding: 0 20px 0 40px; */
+}
