--- a/css/desktop.css
+++ b/css/desktop.css
@@ -573,6 +573,10 @@ nav a.active {
     /* padding: 0 20px 0 40px; */
 }
 
+.empresas-fijo br {
+  display: none;
+}
+
 .empresas-desplazamiento {
     display: inline-block;
     animation: desplazamiento 5s linear infinite; /* Ajusta la duración según la necesidad */
