--- a/css/desktop.css
+++ b/css/desktop.css
@@ -667,6 +667,11 @@ nav a.active {
     transition: transform 500ms;
 }
 
+.main__section--experiencia--h2{
+    font-size: 3.6rem;
+    margin-bottom: 40px;
+}
+
 /* Experience Style Media*/
 
 @media screen and (max-width: 1010px) {
