I fixed the last problem

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -670,6 +670,7 @@ nav a.active {
 .main__section--experiencia--h2{
     font-size: 3.6rem;
     margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 /* Experience Style Media*/
