I am doing the code to photos section

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -284,3 +284,12 @@
     font-style: normal;
     /* padding: 0 20px 0 40px; */
 }
+
+@media screen and  (max-width: 900px){
+    
+    .grid-section {
+        grid-template-columns: repeat(2, 1fr); /* 4 columnas */
+        grid-template-rows: repeat(4, 1fr); /* 4 filas */
+        gap: 20px; /* Espacio entre grid items */
+    }
+}
