--- a/css/desktop.css
+++ b/css/desktop.css
@@ -209,9 +209,18 @@ nav a.active {
     z-index: 0;
 }
 
+.wrappa__son{
+    position: relative;
+    background-color: red;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 .main__section--presentacion--son{
     margin-bottom: 20px;
-    position: absolute;
     z-index: 8; 
 }
 
@@ -224,7 +233,6 @@ nav a.active {
 .main__section--presentacion h1 {
     font-size: 6.4rem;
     color: var(--white-color);
-    top: 180px;
 }
 
 .main__section--presentacion p {
@@ -232,7 +240,6 @@ nav a.active {
     color: var(--white-color);
     line-height: 1.6;
     font-weight: 500;
-    top: 280px;
 }
 
 .contact-button {
@@ -247,7 +254,6 @@ nav a.active {
     border-radius: 5px; /* Opcional: añade redondeo a tu botón */
     transition: background-color 0.3s ease, color 0.3s ease;
     font-weight: 500;
-    top: 360px;
 }
 
 .main__section--presentacion .contact-button:hover {
