--- a/css/desktop.css
+++ b/css/desktop.css
@@ -210,8 +210,7 @@ nav a.active {
 }
 
 .wrappa__son{
-    position: relative;
-    background-color: red;
+    position: absolute;
     width: 100%;
     height: 100vh;
     display: flex;
